--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <!-- Project 1 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
-                        <img src="/Users/Stephen/Desktop/Veterans Remembered/img/1-min.jpg" alt="" class="img-fluid">
+                        <img src="1.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
                     <p>Explination of Project</p>
@@ -124,7 +124,7 @@
                 <!-- Project 2 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
-                        <img src="/Users/Stephen/Desktop/Veterans Remembered/img/2-min.jpg" alt="" class="img-fluid">
+                        <img src="2.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
                     <p>Explination of Project</p>
@@ -132,7 +132,7 @@
                 <!-- Project 3 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
-                        <img src="/Users/Stephen/Desktop/Veterans Remembered/img/3-min.jpg" alt="" class="img-fluid">
+                        <img src="3.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
                     <p>Explination of Project</p>
@@ -140,7 +140,7 @@
                 <!-- Project 4 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
-                        <img src="/Users/Stephen/Desktop/Veterans Remembered/img/4-min.jpg" alt="" class="img-fluid">
+                        <img src="4.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
                     <p>Explination of Project</p>
@@ -148,7 +148,7 @@
                 <!-- Project 5 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
-                        <img src="/Users/Stephen/Desktop/Veterans Remembered/img/5-min.jpg" alt="" class="img-fluid">
+                        <img src="5.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
                     <p>Explination of Project</p>
@@ -156,7 +156,7 @@
                 <!-- Project 6 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
-                        <img src="/Users/Stephen/Desktop/Veterans Remembered/img/6-min.jpg" alt="" class="img-fluid">
+                        <img src="6.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
                     <p>Explination of Project</p>
