--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto" id="mainNav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home
+                        <a class="nav-link" id="links" href="#home">Home
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" id="links" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#ourwork">Our Work</a>
+                        <a class="nav-link" id="links" href="#ourwork">Our Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#ordering">Ordering</a>
+                        <a class="nav-link" id="links" href="#ordering">Ordering</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" id="links" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>  
@@ -119,7 +119,7 @@
                         <img src="1.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
-                    <p>Explination of Project</p>
+                    <p>Explanation of Project</p>
                 </div>
                 <!-- Project 2 -->
                 <div class="col-lg-4 col-md-6 mb-4">
@@ -127,7 +127,7 @@
                         <img src="2.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
-                    <p>Explination of Project</p>
+                    <p>Explanation of Project</p>
                 </div>
                 <!-- Project 3 -->
                 <div class="col-lg-4 col-md-6 mb-4">
@@ -135,7 +135,7 @@
                         <img src="3.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
-                    <p>Explination of Project</p>
+                    <p>Explanation of Project</p>
                 </div>
                 <!-- Project 4 -->
                 <div class="col-lg-4 col-md-6 mb-4">
@@ -143,7 +143,7 @@
                         <img src="4.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
-                    <p>Explination of Project</p>
+                    <p>Explanation of Project</p>
                 </div>
                 <!-- Project 5 -->
                 <div class="col-lg-4 col-md-6 mb-4">
@@ -151,7 +151,7 @@
                         <img src="5.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
-                    <p>Explination of Project</p>
+                    <p>Explanation of Project</p>
                 </div>
                 <!-- Project 6 -->
                 <div class="col-lg-4 col-md-6 mb-4">
@@ -159,7 +159,7 @@
                         <img src="6.png" alt="" class="img-fluid">
                     </div>
                     <h4 class="mt-4">Title</h4>
-                    <p>Explination of Project</p>
+                    <p>Explanation of Project</p>
                 </div>
             </div>
         </section>
@@ -195,7 +195,7 @@
                     <div class="view overlay z-depth-1-half" id="steps">
                         <h3 class="steps white-text mb-0 mt-0">Step III</h3>
                         <div class="instructions white-text">
-                            <p>Finally, Brain will contact you with a proof of design and request your approval. After you approve your
+                            <p>Finally, Brian will contact you with a proof of design and request your approval. After you approve your
                                 design it will be printed, packaged, and shipped to you! Enjoy!</p>
                         </div>
                     </div>
@@ -221,20 +221,18 @@
             <p class="text-center mb-5">Questions? Thoughts? Comments? Bring 'em on! We love connecting with out customers. Once we receive your contact form we will get back in touch with you as soon as possible!</p>
             <div class="row">
                 <div class="col-md-8 col-xl-9">
-                    <form>
+                    <form action="https://formspree.io/veteransremembered@outlook.com" method="POST">
                         <div class="row">
                             <!-- Name -->
                             <div class="col-md-6">
                                 <div class="md-form">
-                                    <input type="text" id="contact-name" class="form-control">
-                                    <label for="contact-name" class="">Your name</label>
+                                    <input type="text" id="contact-name" class="form-control" placeholder="Your Name" name="Name">
                                 </div>
                             </div>
                             <!-- Email -->
                             <div class="col-md-6">
                                 <div class="md-form">
-                                    <input type="text" id="contact-email" class="form-control">
-                                    <label for="contact-email" class="">Your email</label>
+                                    <input type="text" id="contact-email" class="form-control" placeholder="Your Email" name="_replyto">
                                 </div>
                             </div>
                         </div>
@@ -242,8 +240,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="md-form">
-                                    <input type="text" id="contact-Subject" class="form-control">
-                                    <label for="contact-Subject" class="">Subject</label>
+                                    <input type="text" id="contact-Subject" class="form-control" placeholder="Subject" name="Subject">
                                 </div>
                             </div>
                         </div>
@@ -251,15 +248,14 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="md-form">
-                                    <textarea type="text" id="contact-message" class="form-control md-textarea" rows="3"></textarea>
-                                    <label for="contact-message">Your message</label>
+                                    <textarea type="text" id="contact-message" class="form-control md-textarea" rows="3" placeholder="Your Message" name="Contact Message"></textarea>
                                 </div>
                             </div>
                         </div>
+                        <div class="text-center text-md-left mb-5">
+                            <input type="submit" id="contact-Subject" class="btn" value="Send">
+                        </div>
                     </form>
-                    <div class="text-center text-md-left mb-5">
-                        <a class="btn">Send</a>
-                    </div>
                 </div>
                 <!-- Contact Information -->
                 <div class="col-md-4 col-xl-3 text-center">
@@ -305,7 +301,7 @@
                     </div>
                     <div class="modal-body">
                        <!-- Form Begins -->
-                        <form id="Order Form" action="https://formspree.io/sburks@g.clemson.edu" method="POST">
+                        <form id="Order Form" action="https://formspree.io/veteransremembered@outlook.com" method="POST">
                             <div class="form-group">
                                 <label for="exampleFormControlInput1">Your Name</label>
                                 <input name="Name" type="text" class="form-control" id="exampleFormControlInput1" placeholder="First and last name">
@@ -320,7 +316,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleFormControlSelect1">How Do You Plan To Have Your Item Printed?</label>
-                                <select name="How To Order" class="form-control" id="exampleFormControlSelect1">
+                                <select name="How I'll Order" class="form-control" id="exampleFormControlSelect1">
                                     <option>I will...(Select Option)</option>
                                     <option>I will send my item to you and then have you print and ship the item.</option>
                                     <option>I will pay to have my item purchased new and then would like you to print and ship the item to me.</option>
@@ -328,13 +324,13 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleFormControlTextarea1">Please Briefly Explain Your Design Here:</label>
-                                <textarea name="Explination of Order" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                <textarea name="Explanation of Order" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                            <div class="modal-footer">
+                                <input type="submit" id="contact-Subject" class="btn" value="Send Order Form">
                             </div>
                         </form>
                        <!-- /form ends -->
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn">Send Order Form</button>
                     </div>
                 </div>
             </div>
