Updated Project Titles
Added project titles and brief descriptions based off of Facebook information.

--- a/index.html
+++ b/index.html
@@ -118,48 +118,48 @@
                     <div class="view overlay z-depth-1-half">
                         <img src="1.png" alt="" class="img-fluid">
                     </div>
-                    <h4 class="mt-4">Title</h4>
-                    <p>Explanation of Project</p>
+                    <h4 class="mt-4">U.S.M.C. Cross</h4>
+                    <p>Can be fully customized. $65.00 Portion of proceeds go to directly helping military members and families.</p>
                 </div>
                 <!-- Project 2 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
                         <img src="2.png" alt="" class="img-fluid">
                     </div>
-                    <h4 class="mt-4">Title</h4>
-                    <p>Explanation of Project</p>
+                    <h4 class="mt-4">Wood Plank</h4>
+                    <p>Can be fully customized. Portion of proceeds go to directly helping military members and families.</p>
                 </div>
                 <!-- Project 3 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
                         <img src="3.png" alt="" class="img-fluid">
                     </div>
-                    <h4 class="mt-4">Title</h4>
-                    <p>Explanation of Project</p>
+                    <h4 class="mt-4">Commemorative Yeti Tumblr</h4>
+                    <p>Can be fully customized. Portion of proceeds go to directly helping military members and families.</p>
                 </div>
                 <!-- Project 4 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
                         <img src="4.png" alt="" class="img-fluid">
                     </div>
-                    <h4 class="mt-4">Title</h4>
-                    <p>Explanation of Project</p>
+                    <h4 class="mt-4">Commemorative Tile</h4>
+                    <p>Scratch, UV, and Weather Resistant. Portion of proceeds go directly to helping service personnel and their families.</p>
                 </div>
                 <!-- Project 5 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
                         <img src="5.png" alt="" class="img-fluid">
                     </div>
-                    <h4 class="mt-4">Title</h4>
-                    <p>Explanation of Project</p>
+                    <h4 class="mt-4">U.S. Navy Cross</h4>
+                    <p>Can be fully customized. $65.00 Portion of proceeds go to directly helping military members and families.</p>
                 </div>
                 <!-- Project 6 -->
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="view overlay z-depth-1-half">
                         <img src="6.png" alt="" class="img-fluid">
                     </div>
-                    <h4 class="mt-4">Title</h4>
-                    <p>Explanation of Project</p>
+                    <h4 class="mt-4">Commemorative Tile</h4>
+                    <p>Scratch, UV, and Weather Resistant. Portion of proceeds go directly to helping service personnel and their families.</p>
                 </div>
             </div>
         </section>
